--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!--
+         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
+         Google Maps Android API v2, but you must specify either coarse or fine
+         location permissions for the 'MyLocation' functionality. 
+    -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -28,7 +35,26 @@
         <activity android:name=".Cucuta" />
         <activity android:name=".Yopal" />
         <activity android:name=".Medellin" />
-        <activity android:name=".Bucaramanga"></activity>
+        <activity android:name=".Bucaramanga" />
+        <!--
+             The API key for Google Maps-based APIs is defined as a string resource.
+             (See the file "res/values/google_maps_api.xml").
+             Note that the API key is linked to the encryption key used to sign the APK.
+             You need a different API key for each encryption key, including the release key that is used to
+             sign the APK for publishing.
+             You can define the keys for the debug and release targets in src/debug/ and src/release/. 
+        -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
+        <activity
+            android:name=".Ubicacion"
+            android:label="@string/title_activity_ubicacion" />
+        <activity android:name=".Comunidad" />
+        <activity android:name=".Programas" />
+        <activity android:name=".Admisiones" />
+        <activity android:name=".Uniremington"></activity>
     </application>
 
 </manifest>
